# kmfscada

./: .dockerignore  .env.scada  .gitignore  ALARM_RULE_README.md  Dockerfile  MQTT_SSL_SETUP_SIMPLE.md  Makefile  QUICKSTART.md  QUICKSTART_SUPABASE.md  README.md  README_SCADA.md  SENSOR_DATA_ARCHITECTURE.md  USER_VALIDATION_GUIDE.md  alembic.ini  docker-compose.base.yml  docker-compose.rabbitmq.yml  docker-compose.s3.yml  docker-compose.scada.yml  docker-compose.serverless.yml  docker-compose.supabase.yml  docker-compose.yml  env.example  env.scada.example  history.sh  logging_config.yaml  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  reset.sh  run_user_tests.py  scada-modbus.py  st20.regs copy.csv  st20.regs.csv  start.sh  test_imports.py  test_new_architecture.py  test_user_core.py  (+4 more)
alembic/: env.py
alembic/versions/: create_sensor_readings_table.py  remove_user_table.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: alarm_records.py  alarm_rules.py  audit_log.py  auth.py  export_record.py  mqtt.py  (+7 more)
app/core/: config.py  context.py  database.py  logging.py  supabase.py
app/crud/: __init__.py  crud_production.py  crud_sensor.py
app/db/: base.py  session.py  timescale.py
app/middleware/: logging_middleware.py
app/models/: __init__.py  alarm_record.py  alarm_rule.py  audit_log.py  export_record.py  production.py  production_line.py  sensor.py  sensor_data.py
app/models/mixins/: __init__.py
app/mqtt/: __init__.py  background_tasks.py  client.py  manager.py  processor.py  publisher.py  sensor_configs.py  simulate_producer.py  subscriber.py  worker.py
app/schemas/: __init__.py  alarm_record.py  alarm_rule.py  audit_log.py  export_record.py  production.py  production_line.py  sensor.py  sensor_data.py  user.py
app/services/: __init__.py  alarm_record_service.py  alarm_rule_service.py  audit_log_service.py  export_record_service.py  production_line_service.py  sensor_data_service.py
app/utils/: __init__.py  audit_log.py  request.py  sensor_data_utils.py
app/websocket/: __init__.py  broadcaster.py  manager.py  types.py
backend/: Dockerfile  main.py  requirements.txt
backend/app/: __init__.py
backend/app/core/: auth.py  config.py
docs/: LOGGING_BEST_PRACTICES.md  SENSOR_DATA_MODEL.md  SUPABASE_INTEGRATION.md  TIMESCALEDB_IMPLEMENTATION.md  TIMESCALEDB_SETUP.md  camera.html  dashboard.html  requirement.md  softmax.py
docs/iotrouter/: iotrouter.demo.flow.json  readme.md
frontend/: .dockerignore  Dockerfile  build-docker.sh  next.config.js  package.json  tsconfig.json
scripts/: check_python_version.py  config_demo.py  manage_ssl_certs.sh  test_logging.py  test_mqtt_proxy.py  test_sensor_crud.py  test_sensor_data.py  test_timescaledb.py
scripts/tests/: test_auth_flow.py  test_jwt.py
volumes/api/: kong-auth.yml  kong.yml
volumes/api/ssl/: 74.121.149.207-mqtt.crt  74.121.149.207-mqtt.key  README.md  ca.crt  ca.key  ca.srl  mqtt.crt  mqtt.key
volumes/db/init/: README.md  privilege.sql  timescaledb.sql  ts_kmf.sql
volumes/rabbitmq/: definitions.json
volumes/rabbitmq/nginx/: mqtt-ssl.conf
(+3 files in other folders)
